app/assets/stylesheets/playlist.css.scss
.field-withflag {
  float: left;
  width: 85%;
}
.field-flag {
  float: right;
  width: 10%;
}
.field-label {
  float: left;
  width: 66%;
}
.field-year {
  float: right;
  width: 26%;
}

table {
  width: 100%;
}
body > table { padding-top: 2em; }

thead {
  font-family: 'Merriweather', serif;
  font-weight: 900;
  font-style: italic;
  font-size: 0.9em;
  td {
    padding-bottom: 0.5em;
  }
}

tr.grey * { color: #999; }

#now td span {
  display: inline-block;
  font-style: italic;
  font-weight: 700;
}
#now.dj-signed-in-now td { padding-top: 6em; }
#now.dj-signed-out-now td { padding-top: 4em; }

i.dingbat {
  font-style: normal;
  font-family: "Zapf Dingbats";
}

.delete-song {
  display: inline;
  float: left;
  margin-left: -1.5em;
  a {
    color: inherit;
    font-weight: 100;
    text-decoration: none;
  }
  a:hover {
    color: #e74c3c;
    font-weight: inherit;
  }
}

td {
  padding-bottom: 0.3em;
  height: 1.2em;
  vertical-align: top;
}

.width1,
.width2,
.width3,
.width4 { line-height: 1.1 }
.width1{ width: 3em; }
.width2{ width: 6em; }
.width3{ width: 12em; }
.width4{ width: 15em; }
.bip-sized{
  width: 95%;
}

.time-col { min-width: 60px; }

.thin { font-weight: 300; }
.italic { font-style:italic; }

#now-button {
  background-color: #fdbc05;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  position: absolute;
  right: -0.5em;
  top: 3.9em;
  color: #FFF;
  font-weight: 800;
  font-variant: small-caps;
  text-align: center;
  -webkit-transform: rotate(30deg);
  -moz-transform: rotate(30deg);
  -ie-transform: rotate(30deg);
  -o-transform: rotate(30deg);
  span {
    top:25%;
    position: relative;
  }
  display: none;
}

#infinity {
  width: 100%;
  display:block;
  text-align: center;
  padding-top: 1em;
  padding-bottom: 3em;
}

.setbreak {
  color: #999;
  text-align: center;
  font-family: 'Alegreya Sans SC';
  letter-spacing: 3pt;
  overflow: hidden;
  white-space: nowrap; 
  .delete-song { letter-spacing: 0; }
}
.setbreak > span {
  position: relative;
  display: inline-block;
}

.setbreak > span:before,
.setbreak > span:after {
  content: "";
  position: absolute;
  top: 50%;
  width: 9999px;
  height: 1px;
  background: #999;
}

.setbreak > span:before {
  right: 100%;
  margin-right: 15px;
}

.setbreak > span:after {
  left: 100%;
  margin-left: 15px;
}

